syntax = "proto3";

package medical.api;

//import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";

service PatientApi {
  // Sends a greeting
  rpc Find (PatientRequest) returns (stream PatientReply) {}
  rpc Get (PatientIdRequest) returns (PatientReply) {}
  rpc GetFullPatient (PatientIdRequest) returns (FullPatientReply) {}
}

message PatientRequest {
  string name = 1;
}
message PatientIdRequest {
  string id = 1;
}

message PatientReply {
  string id = 1;
  string name = 2;
  string paternalSurname = 3;
  string maternalSurname = 4;
}

message FullPatientReply {
  string id = 1;
  string name = 2;
  string paternalSurname = 3;
  string maternalSurname = 4;
  google.protobuf.Timestamp dateOfBirth = 5;
}
